--- a/theme/index.html
+++ b/theme/index.html
@@ -52,164 +52,186 @@
       </div>
     </section>
 
-      <!-- Wanderlust -->
-      <section id="wanderlust">
-        <div class="container">
+    <!-- Travel -->
+    <section id="travel">
+      <div class="container">
+        <h2>Travel</h2>
+        <p class="desc">
+          Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
+        </p>
+        <div class="map">
+          <img src="map.png" alt="">
+          <button type="button" name="button">Voir toutes les destinations</button>
+        </div>
+        <article class="video">
+          <p class="surtitre">Dernière vidéo</p>
+          <img src="image.png" alt="Image">
+          <button type="button" name="button">Lire la vidéo</button>
+          <div class="content">
+            <h1>Un Noël à New-York</h1>
+            <p class="date">5:03 | 18 septembre 2018</p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <section id="second-level">
+      <div class="container">
+        <!-- /////////////////////////////////////////////////////
+        TOUS LES ARTICLES
+        ///////////////////////////////////////////////////// -->
+        <p class="surtitre">Tous les articles</p>
+
+        <div id="all-articles">
+          <article class="article">
+            <img src="image-sq.png" alt="Image">
+            <div class="align-bottom">
+              <h1>5 séries feel good parfaites pour décompresser</h1>
+              <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
+            </div>
+            <p class="chapo">Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
+            <button type="button" name="button">Lire l'article</button>
+          </article>
+          <article class="article">
+            <img src="image-sq.png" alt="Image">
+            <div class="align-bottom">
+              <h1>Un repas de fête vegan</h1>
+              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+            </div>
+            <p class="chapo">Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
+            <button type="button" name="button">Lire l'article</button>
+          </article>
+          <article class="article">
+            <img src="image-sq.png" alt="Image"><div class="align-bottom">
+              <h1>Des musiques pour chiller en toute tranquilité</h1>
+              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+            </div>
+            <p class="chapo">Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
+            <button type="button" name="button">Lire l'article</button>
+          </article>
+          <article class="article">
+            <img src="image-sq.png" alt="Image">
+            <div class="align-bottom">
+              <h1>Un noël à New-York</h1>
+              <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
+            </div>
+            <p class="chapo">« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
+            <button type="button" name="button">Lire l'article</button>
+          </article>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- /////////////////////////////////////////////////////
+    CATEGORIES
+    ///////////////////////////////////////////////////// -->
+    <section id="categories">
+      <div class="container">
+        <!-- Culturez-moi -->
+        <div class="cat">
           <div class="intro">
-            <h2>Wanderlust</h2>
+            <h3>Culturez-moi</h3>
             <p class="desc">
-              Nos voyages, au bout du monde comme à 50km de chez nous. On compte pas les kilomètres.
+              La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
             </p>
           </div>
-          
-          <article class="wanderlust">
+          <article class="cat-big">
             <img src="image.png" alt="Image">
             <div class="content">
-              <h1>Roadtrip à l'Est</h1>
-              <ul>
-                <li><h3>Partie 1 : Allemagne nous voilà</h3></li>
-                <li><h3>Partie 2 : No Kangaroo in Austria</h3></li>
-                <li><h3>Partie 3 : La Slovénie ? On dit oui !</h3></li>
-                <li><h3>Partie 4 : Vérone et Annecy</h3></li>
-              </ul>
+              <h1>5 séries feel good parfaites pour décompresser</h1>
+              <p class="date">12 novembre 2017 | 0 commentaire</p>
             </div>
           </article>
-          <button type="button" name="button">Découvrir plus</button>
         </div>
-      </section>
 
-      <section id="second-level">
-        <div class="container">
-          <!-- /////////////////////////////////////////////////////
-          TOUS LES ARTICLES
-          ///////////////////////////////////////////////////// -->
-          <p class="surtitre">Tous les articles</p>
-
-          <div id="all-articles">
-            <article class="article">
-              <img src="image.png" alt="Image">
-              <div class="align-bottom">
-                <h1>5 séries feel good parfaites pour décompresser</h1>
-                <p class="date"><a href="#">Culturez-moi</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Bien le bonjour petit scarabé ! Comme tu dois le savoir maintenant je suis une grande sérivore depuis moulte temps. J'aime vraiment tous les types de séries, mais il faut bien avouer que j'adapte ce que je vais regarder à mon mood du moment. Alors après une grosse journée...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image.png" alt="Image">
-              <div class="align-bottom">
-                <h1>Un repas de fête vegan</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Bien le bonjour toi ! Je te pris de me pardonner pour mon absence ce mois-ci mais je suis en pleine recherche d'appartement à Paris, autant te dire que c'est le parcours du combattant.. Mais bon je ne t'oublie pas et je reviens en force avec un article cuisine et plus particulièrement : un repas d...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image.png" alt="Image"><div class="align-bottom">
-                <h1>Des musiques pour chiller en toute tranquilité</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">Hello toi ! J'espère que tu vas bien. Au risque d'être fichée comme la miss météo du quartier : il fait froid là nan ? #captainObvious Dis moi tu n'aurais pas envie de te dorlotter dans un plaid tout chaud et d'hiberner patiemment le temps que l'hiver passe ? Et si je te proposais en plus d'av...</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
-            <article class="article">
-              <img src="image.png" alt="Image">
-              <div class="align-bottom">
-                <h1>Un noël à New-York</h1>
-                <p class="date"><a href="#">Lifestyle</a><br />21 janvier 2018 | 2 commentaires</p>
-              </div>
-              <p class="chapo">« Oh Oh Oh ! Bonjour les enfants ! » « Bonjour mère Léa ! » « Dites-moi les lecteur-trices, est-ce que vous avez été sages cette année ? » (là tu fais : ouiii !) « Ah super top moumoute ! Pour te féliciter je te propose un merveilleux article sur : Noël à New York. » ouuuuuh</p>
-              <button type="button" name="button">Lire l'article</button>
-            </article>
+        <!-- Culturez-moi -->
+        <div class="cat">
+          <div class="intro">
+            <h3>Enfants de l'internet</h3>
+            <p class="desc">
+              Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
+            </p>
           </div>
-        </div>
-      </section>
-
-
-            <!-- /////////////////////////////////////////////////////
-            CATEGORIES
-            ///////////////////////////////////////////////////// -->
-            <section id="categories">
-              <div class="container">
-                <!-- Culturez-moi -->
-                <div class="cat">
-                  <div class="intro">
-                    <h3>Culturez-moi</h3>
-                    <p class="desc">
-                      La culture, moins on en a, plus on l’étale. Donc on l’étale, un peu (beaucoup ?)
-                    </p>
-                  </div>
-                  <article class="cat-big">
-                    <img src="image.png" alt="Image">
-                    <div class="content">
-                      <h1>5 séries feel good parfaites pour décompresser</h1>
-                      <p class="date">12 novembre 2017 | 0 commentaire</p>
-                    </div>
-                  </article>
-                </div>
-
-                <!-- Culturez-moi -->
-                <div class="cat">
-                  <div class="intro">
-                    <h3>Enfants de l'internet</h3>
-                    <p class="desc">
-                      Nés une souris dans la main, on a ensuite maîtrisé le smartphone. Devenez millenials comme nous.
-                    </p>
-                  </div>
-                  <article class="cat-big">
-                    <img src="image.png" alt="Image">
-                    <div class="content">
-                      <h1>Ces 7 applis indispensables au quotidien</h1>
-                      <p class="date">12 novembre 2017 | 0 commentaire</p>
-                    </div>
-                  </article>
-                </div>
-
-                <!-- Lifestyle -->
-                <div class="cat">
-                  <div class="intro">
-                    <h3>Lifestyle</h3>
-                    <p class="desc">
-                      Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
-                    </p>
-                  </div>
-                  <article class="cat-big">
-                    <img src="image.png" alt="Image">
-                    <div class="content">
-                      <h1>Un repas de fête vegan</h1>
-                      <p class="date">12 novembre 2017 | 0 commentaire</p>
-                    </div>
-                  </article>
-                </div>
-
-                <!-- Foodie -->
-                <div class="cat">
-                  <div class="intro">
-                    <h3>Foodie</h3>
-                    <p class="desc">
-                      Manger : voilà un mot que tout le monde aime. Allez, bon appétit !
-                    </p>
-                  </div>
-                  <article class="cat-big">
-                    <img src="image.png" alt="Image">
-                    <div class="content">
-                      <h1>Un repas de fête vegan</h1>
-                      <p class="date">12 novembre 2017 | 0 commentaire</p>
-                    </div>
-                  </article>
-                </div>
-              </div>
-
-
+          <article class="cat-big">
+            <img src="image.png" alt="Image">
+            <div class="content">
+              <h1>Ces 7 applis indispensables au quotidien</h1>
+              <p class="date">12 novembre 2017 | 0 commentaire</p>
             </div>
-            </section>
-    </main>
+          </article>
+        </div>
 
-    <footer>
-      <div class="container">
-        <h2>Ceci est un footer</h2>
+        <!-- Lifestyle -->
+        <div class="cat">
+          <div class="intro">
+            <h3>Lifestyle</h3>
+            <p class="desc">
+              Au début on naît, à la fin on meurt. Entre les deux, on remplit cette catégorie.
+            </p>
+          </div>
+          <article class="cat-big">
+            <img src="image.png" alt="Image">
+            <div class="content">
+              <h1>Un repas de fête vegan</h1>
+              <p class="date">12 novembre 2017 | 0 commentaire</p>
+            </div>
+          </article>
+        </div>
 
+        <!-- Foodie -->
+        <div class="cat">
+          <div class="intro">
+            <h3>Foodie</h3>
+            <p class="desc">
+              Manger : voilà un mot que tout le monde aime. Allez, bon appétit !
+            </p>
+          </div>
+          <article class="cat-big">
+            <img src="image.png" alt="Image">
+            <div class="content">
+              <h1>Un repas de fête vegan</h1>
+              <p class="date">12 novembre 2017 | 0 commentaire</p>
+            </div>
+          </article>
+        </div>
       </div>
-    </footer>
-  </body>
-  </html>
+
+
+    </div>
+  </section>
+
+  <section id="newsletter">
+    <form class="container" action="index.html" method="post">
+      <label for="email">Email</label>
+      <input type="email" name="email" value="">
+      <button type="button" name="button">Envoyer</button>
+    </form>
+  </section>
+
+  <section id="instagram">
+    <div class="container">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+      <img src="image-sq.png" alt="">
+    </div>
+  </section>
+</main>
+
+<footer>
+  <div class="container">
+    <h2>Ceci est un footer</h2>
+
+  </div>
+</footer>
+</body>
+</html>
